PATCH /api/activos/:id
 edicion de inventario
