# src/routes/activo.routes.ts
@@ -1,10 +1,11 @@
 import { Router } from 'express';
-import { crearActivo, listarActivos, obtenerActivo } from '../controllers/activo.controller';
+import { crearActivo, listarActivos, obtenerActivo, actualizarActivo } from '../controllers/activo.controller';
 
 const router: Router = Router();
 
 router.get('/', listarActivos);
 router.post('/', crearActivo);
 router.get('/:id', obtenerActivo);
+router.patch('/:id', actualizarActivo);
 
 export default router;
